# biodash

./: .gitignore  .gitlab-ci.yml  README.md
backend-project/: .dockerignore  Dockerfile  Dockerfile_local  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
backend-project/data/: BioMeasurementTimeseriesSampleDataset.xlsx  data_preprocessor.py  generate_data.py  user_data_dummy.json
backend-project/src/dummy_server/business_logic/: forecast_model.py
backend-project/src/dummy_server/models/: biometrics_prediction.py
backend-project/src/dummy_server/resources/: __init__.py  forecast_data.py  scatter_data.py
backend-project/src/dummy_server/router/: app.py  routes.py
backend-project/src/dummy_server/schemas/: __init__.py  biometric_data.py  exercise.py  user.py
backend-project/src/server/models/: biometrics_prediction.py  forecast_model.py  model.py
backend-project/src/server/resources/: __init__.py  forecast_data.py
backend-project/src/server/resources/users/: dummy.json
backend-project/src/server/router/: routes.py
backend-project/src/server/schemas/: __init__.py  biometric_data.py  exercise.py  recommendations.py  user.py
backend-project/src/server/weights/: weight_model.pkl
backend-project/src/server/weights/Fat mass Perc/: preprocessor.pkl  scaler.pkl  target.pkl
backend-project/src/server/weights/HR At Rest/: model.pkl  past_cov.pkl  scaler.pkl
backend-project/src/server/weights/Muscle Mass/: model.pkl  past_cov.pkl  scaler.pkl  target.pkl
backend-project/src/server/weights/Weight/: target.pkl
forecasting-model/: data_preprocessing.ipynb  data_preprocessor_legacy.py  exercise_metrics_calculation.ipynb  model_explainability.ipynb  model_training.ipynb  past_cov.pkl  processed_dataset.pkl.REMOVED.git-id  timeseries_dataset.pkl.REMOVED.git-id  weight_model.pkl  weight_preprocessor.pkl  weight_scaler.pkl
forecasting-model/data/: BM_2022_Q1_Q2.csv.REMOVED.git-id  BM_2022_Q3_Q4.csv.REMOVED.git-id  BioMeasurementSampleDataset.xlsx  Legend.xlsx  PerformedExercisesSampleDataset.xlsx  bq-results-20240418-170114-1713459684969.csv.REMOVED.git-id  user_data_dummy.json
forecasting-model/weights/Fat mass Perc/: model.pkl  past_cov.pkl  target.pkl
helm/: Chart.yaml
helm/templates/: deployment.yaml
react-frontend/: README.md  package-lock.json  package.json
react-frontend/public/: index.html
react-frontend/src/: App.css  App.scss  App.tsx  _custom-bootstrap.scss  colors.module.scss  defaults.ts  index.scss  utils.ts
(+20 files in other folders)
