[tool.poetry]
name = "backend-project"
version = "0.1.0"
description = "An interactive providing insights to athletes' performance"
authors = ["Georgios Manos <gmanos@student.ethz.ch>",
           "Ahmad Khan <akhan@student.ethz.ch>",
           "Aris Koutris <akoutris@student.ethz.ch>",
           "Maria Gkoulta <mgkoulta@student.ethz.ch>"]
packages = [{include = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-cors = "^4.0.0"
flake8 = "^7.0.0"
marshmallow = "^3.21.1"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
